[workspace]

exclude = [
	"vendor/subxt",
	"vendor/webpki",
	"vendor/ring",
	"vendor/native-nostd-hasher",
	"vendor/jsonrpsee",
	"pruntime"
]

members = [
	"collator",
	"collator/runtime",
	"common/parachain_utils",
	"common/types",
	"pallets/phala",
	"pallets/mining_staking",
	"pallets/claim",
	"phost"
]

resolver = "2"
