[package]
name = "phost"
version = "0.1.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
futures = { package = "futures", version = "0.3.4" }
tokio = { version = "0.2", features = ["full"] }
hyper = { version = "0.13" }
hex = { version = "*" }
base64 = "0.11"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
bytes = "0.5"
structopt = { version = "0.3" }

codec = { package = 'parity-scale-codec', version = "2.1.0" }
subxt = { path = "../vendor/subxt", package = "substrate-subxt" }
async-trait = "0.1.49"
system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", package = "frame-system" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }

phala-types = { path = "../common/types" }
