[package]
name = "phala-types"
version = "0.3.0"
authors = ["Phala Network"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "rococo-v1" }

[features]
default = ["std", "pruntime", "enable_serde"]
std = [
    "serde/std",
    "codec/std",
    "sp-core/full_crypto",
    "sp-runtime/std",
    "xcm/std",
    "cumulus-primitives-core/std"
]
enable_serde = [
	"serde/derive",
	"serde/alloc",
    "sp-core/serde",
    "sp-runtime/serde",
]
pruntime = [
	"sp-runtime"
]
