[package]
authors = ['Phala Network']
edition = '2018'
name = 'pallet-claim'
version = "2.0.0"
license = "Apache 2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/phala-blockchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
log = { version = "0.4.14", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ['std']
std = [
    "codec/std",
    "serde/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
]
