[package]
authors = ["Phala Network"]
edition = "2018"
name = "phala-parachain-info"
version = "0.0.1"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
]
